# updates

./: .env.example  .gitignore  README.md  pyproject.toml
src/updates/: __init__.py  api.py  cli.py  config.py  schemas.py  state.py
src/updates/services/: __init__.py  claude.py  elevenlabs.py  readwise.py
